# OperationSquirrel

./: .clangd  .gitignore  .gitmodules  README.md  about.html  contact.html  curriculum.html  index.html  pricing.html  resources.html  tech-specs.html
Docs/: 01-Setting-up-SITL.md  (+13 more)
SquirrelDefender/: .editorconfig  Building-SquirrelDefender.md  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  main  params.json  template.h
SquirrelDefender/UnitTests/: cppu_runner.cpp  cppu_vehicle_controller_tests.cpp
SquirrelDefender/apphdr/: attitude_controller.h  common_inc.h  datalog.h  debug_terminal.h  debugger.h  detect_target.h  detect_target_jetson_inference.h  detect_target_nv.h  detect_target_yolo.h  follow_target.h  global_calibrations.h  global_objects.h  global_types.h  jetson_IO copy.h  jetson_IO.h  jetson_io.h  localize_target.h  math_utils.h  mav_data_hub.h  mavlink_cmd_handler.h  mavlink_command_handler.h  mavlink_msg_handler.h  mavlink_print_info.h  mode_nogps.h  object_detection.h  parameters.h  path_planner.cpp  path_planner.h  path_planner_delivery.h  path_planner_grid.h  path_planner_types.h  pid_controller.h  scheduler.h  serial_comm.h  serial_port_handler.h  sim_flight_test_1_goToWaypoint.h  sim_flight_test_2_setAttitudeTarget.h  standard_libs.h  status_io.h  system_controller.h  (+21 more)
SquirrelDefender/appsrc/: attitude_controller.cpp  datalog.cpp  debug_terminal.cpp  debugger.cpp  detect_target.cpp  detect_target_jetson_inference.cpp  detect_target_nv.cpp  detect_target_yolo.cpp  follow_target.cpp  global_calibrations.cpp  global_objects.cpp  global_types.cpp  global_types.h  globlal_calibrations.cpp  jetson_IO.cpp  jetson_io.cpp  localize_target.cpp  localize_target.h  main.cpp  math_utils.cpp  mav_data_hub.cpp  mavlink_cmd_handler.cpp  mavlink_command_handler.cpp  mavlink_msg_handler.cpp  mavlink_print_info.cpp  mode_nogps.cpp  object_detection.cpp  parameters.cpp  parmeters.cpp  path_planner.cpp  path_planner_delivery.cpp  path_planner_example  path_planner_follower.cpp  path_planner_grid.cpp  pid_controller.cpp  scheduler.cpp  serial_comm.cpp  serial_port_handler.cpp  status_io.cpp  system_controller.cpp  (+20 more)
SquirrelDefender/data/: README.md
SquirrelDefender/inc/catch2/: catch_session.hpp
SquirrelDefender/inc/jetson-utils/: json.hpp  xml.h
SquirrelDefender/inc/tinyobj/: tiny_obj_loader.h
SquirrelDefender/lib/: temp.txt
SquirrelDefender/libraries/json/: param_reader.cpp  param_reader.h
SquirrelDefender/libraries/logger/: mcap_logger.cpp  mcap_logger.h
SquirrelDefender/libraries/math/: curve_fitting.cpp  curve_fitting.h  interpolate.cpp  interpolate.h  signal_processing.cpp  signal_processing.h  vector_math.cpp  vector_math.h
SquirrelDefender/libraries/mav/: mav_cmd.cpp  mav_cmd.h  mav_motion.cpp  mav_motion.h  mav_msg_print.cpp  mav_msg_print.h  mav_serial.cpp  mav_serial.h  mav_utils.h
SquirrelDefender/libraries/osnet/: OSNet.h
SquirrelDefender/libraries/pid/: pid.cpp  pid.h
SquirrelDefender/libraries/print/: custom_print.cpp  custom_print.h
SquirrelDefender/libraries/serial/: serial.cpp  serial.h
SquirrelDefender/libraries/timer/: timer.cpp  timer.h
SquirrelDefender/libraries/yolo/: YOLOv8.cpp  YOLOv8.h  yolo_net.h
SquirrelDefender/models/SSD-Inception-v2/: ssd_inception_v2_coco.uff.sha256sum
SquirrelDefender/modules/json_utils/: json_utils.cpp  json_utils.h
SquirrelDefender/modules/math_utils/: interpolate.cpp  interpolate.h
SquirrelDefender/modules/mav_utils/: mav_cmd.cpp  mav_cmd.h  mav_motion.cpp  mav_motion.h  mav_msg_print.cpp  mav_msg_print.h  mav_utils.h  mavlink_cmd_handler.cpp  mavlink_cmd_handler.h  mavlink_print_info.cpp  mavlink_print_info.h
SquirrelDefender/modules/pid/: pid.cpp  pid.h
SquirrelDefender/modules/print_utils/: custom_print.cpp  custom_print.h
SquirrelDefender/modules/serial_utils/: serial.cpp  serial.h  uart_utils.cpp  uart_utils.h
SquirrelDefender/modules/timer/: timer.cpp  timer.h
SquirrelDefender/modules/yolo_utils/: yolo_net.cpp  yolo_net.h
SquirrelDefender/networks/: tensorrt.8201.timingcache
SquirrelDefender/networks/SSD-Mobilenet-v1/: labels.txt  ssd-mobilenet-Epoch-48-Loss-4.583104677120702.onnx.sha256sum
SquirrelDefender/networks/SSD-Mobilenet-v2/: ssd_mobilenet_v2_coco.uff.sha256sum
SquirrelDefender/networks/osnet/: osnet_x0_25.engine.Orin.fp16.batch32  osnet_x0_25_dynamic.onnx  oxnet_x0_25.engine.NVIDIAGeForceRTX3060LaptopGPU.fp16.batch32
SquirrelDefender/networks/yolov11n/: yolo11n.onnx.sha256sum
SquirrelDefender/networks/yolov5m/: yolov5m.onnx.sha256sum
SquirrelDefender/proto/: Common.proto  Control.proto  Detection.proto  ImageAnnotations.proto  Mavlink.proto  Path.proto  System.proto  Target.proto  TargetInfo.proto  localization.proto
SquirrelDefender/sbow-build/: CMakeCache.txt  Makefile  cmake_install.cmake  squirreldefender
SquirrelDefender/test_data/: L2R_route_1_scrubbed.csv  R2L_route_1_scrubbed.csv  data.csv  data_1.csv
SquirrelDefender/test_flights/: sim_flight_test_2_AttitudeControl.h  sim_flight_test_4_VelocityControl.h
SquirrelDefender/test_suite/: data.csv  data_1.csv  test_follow_target.cpp  test_localize_target.cpp  test_params.json  test_payload_planner.cpp  tst_csv
SquirrelDefender/test_suite/sim_drone/: sim_drone.cpp  sim_drone.h
SquirrelDefender/test_suite/test_flights/: sim_flight_test_1_GPSWaypoints.h  sim_flight_test_2_AttitudeControl.h  sim_flight_test_3_VelocityControl.h
SquirrelDefender/test_suite/test_utils/: csv_reader.h  test_csv_utils.cpp  test_csv_utils.h  test_harness.h  test_io.cpp  test_io.h  test_utils.cpp  test_utils.h
SquirrelDefender/tests/: sim_flight_test_1_GPSWaypoint.h  sim_flight_test_1_GPSWaypoints.h  sim_flight_test_2_AttitudeControl.h  sim_flight_test_3_VehiclePositionControl.h  sim_flight_test_3_VelocityControl.h  sim_flight_test_4_VelocityControl.h
scratch/MAVSDK-examples/telem-example/: CMakeLists.txt  main.cpp
scratch/SLAM-examples/live-slam-example/: CMakeLists.txt  main.cc
scratch/SquirrelDefender-detection/: CMakeLists.txt  params.json
scratch/jetson-io-examples/: CMakeLists.txt  main.cpp
(+572 files in other folders)
